Added district view

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@ body {
         Cantarell,
         Helvetica Neue,
         sans-serif;
+    box-sizing: border-box;
+}
+
+*, *::after, *::before {
+    box-sizing: border-box;
 }
 
 @media (max-width: 768px) {
